feat : add new content and add privacy policy page

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -27,9 +27,10 @@
       <div class="col-md-6">
         <div class="tssp">
           <p>
-            Ventonix is an IT hub which provides you diverse services such as
-            Website Designing, Website Development, Mobile App Development and
-            Graphic Designing which suit perfectly to your needs.
+            Ventonix has a highly skilled team of experts offering some of the
+            best digital experiences to businesses & startups across the globe.
+            We focus on growing our company besides building long-term
+            relationships with our clients.
           </p>
         </div>
       </div>
@@ -46,8 +47,9 @@
               </div>
               <div class="content">
                 <h2>
-                  The mission of Ventonix is to provide secure and reliable
-                  service that meets the customer’s needs.
+                  Our mission is to deliver reliable, secure, and futuristic web
+                  and mobile app solutions that are client-focused and
+                  customer-centric.
                 </h2>
               </div>
             </li>
@@ -57,8 +59,9 @@
               </div>
               <div class="content">
                 <h2>
-                  Our expertise lies in creating websites according to clients
-                  vision and requirements.
+                  Our vision is to partner with various startups and businesses
+                  globally and help them build a digital presence by launching
+                  products for their users.
                 </h2>
               </div>
             </li>
@@ -68,8 +71,10 @@
               </div>
               <div class="content">
                 <h2>
-                  Ventonix is committed to providing the best services in web
-                  technology, both technological and client servicing.
+                  Our professionals provide hand-holding support to the client
+                  so that they get the best solution that leaves a great
+                  impression on the mind of users and help them to grow their
+                  business.
                 </h2>
               </div>
             </li>
@@ -187,11 +192,12 @@
         <div class="col-md-12">
           <div class="lts-inner">
             <h2>
-              Take your career to next level, <br />
+              Take your career to next level,
+              <br />
               join our team
             </h2>
             <a [routerLink]="['/careers']" class="btn-white-border"
-              >See openings
+              >see openings
               <img src="../../../assets/images/arrow.svg" alt="icon"
             /></a>
           </div>
