--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -32,8 +32,10 @@
       <div class="col-md-6">
         <div class="tssp">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ventonix believes in offering best-in-class website development,
+            mobile app development, UI/UX design, and SEO services to startups
+            and businesses alike. Share your details with us, and we promise to
+            deliver you a unique, attractive, and profitable solution.
           </p>
         </div>
       </div>
