--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,8 +9,8 @@
             <!-- <span class="typing-css"></span> -->
           </h1>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            We are passionate about building next-gen web and mobile app
+            solutions that allow businesses to thrive in the digital world.
           </p>
           <a [routerLink]="['/about']" class="btn btn-main nav__link"
             >Let's get started <img src="../../../assets/images/arrow.svg"
@@ -239,13 +239,13 @@
         <div class="we-offer-inner">
           <h5><small>WE OFFERS</small></h5>
           <h2>
-            <strong>Expert <span>Services</span></strong>
+            <strong>We Have <span>Specialization In</span></strong>
           </h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            We offer best-in-class web and mobile app development services for
+            businesses and startups across the globe. Our professional team of
+            developers delivers a solution that helps your business grow
+            efficiently. Have a look at the services we offer:
           </p>
         </div>
       </div>
@@ -326,8 +326,8 @@
             <small>VENTONIX IN NUMBERS</small>
           </h5>
           <h2>
-            Since years we have put in our hard work and dedication to excell
-            our client’s expectations. Here are just few stats.
+            For years we have put in our hard work and dedication to excel our
+            client’s expectations. Here are just a few stats.
           </h2>
         </div>
       </div>
@@ -376,30 +376,26 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4 col-lg-3">
+      <div class="col-md-4 col-lg-4">
         <div class="tts">
           <h2>
-            Why work <br />
-            with us?
+            Why Choose Ventonix<br />
+            for Your Project?
           </h2>
         </div>
       </div>
-      <div class="col-md-8 col-lg-9">
+      <div class="col-md-8 col-lg-8">
         <div class="tts">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+            Ventonix is the first choice of various businesses and brands across
+            the globe for building various web and mobile applications. Here are
+            some of the reasons to choose Ventonix for your next project idea:
           </p>
         </div>
       </div>
     </div>
     <div class="row justify-content-end">
-      <div class="col-md-8 col-lg-9">
+      <div class="col-md-8 col-lg-8">
         <div class="tts">
           <ul>
             <li>
@@ -407,8 +403,12 @@
                 <img src="assets/images/icon1.svg" class="img-fluid" alt="" />
               </div>
               <div class="content">
-                <h2>Dedicated Resources</h2>
-                <h4>Every project is backed with real working humans</h4>
+                <h2>Customer Satisfaction</h2>
+                <h4>
+                  Our professionals utilize the required technologies and tools
+                  to deliver intuitive, high-quality, and scalable solutions for
+                  your business.
+                </h4>
               </div>
             </li>
             <li>
@@ -416,8 +416,11 @@
                 <img src="assets/images/icon1.svg" class="img-fluid" alt="" />
               </div>
               <div class="content">
-                <h2>Perfection</h2>
-                <h4>All our work is quality tested for high quality</h4>
+                <h2>Dedicated Team</h2>
+                <h4>
+                  We possess a highly-dedicated team of professionals working on
+                  various frameworks and technologies running in the market.
+                </h4>
               </div>
             </li>
             <li>
@@ -425,8 +428,11 @@
                 <img src="assets/images/icon1.svg" class="img-fluid" alt="" />
               </div>
               <div class="content">
-                <h2>On-time Delivery</h2>
-                <h4>Your time is precious. We understand it!</h4>
+                <h2>On-Time Deliver</h2>
+                <h4>
+                  We value the time of our clients and deliver the project as
+                  per the requirement in the decided timeline.
+                </h4>
               </div>
             </li>
           </ul>
@@ -534,7 +540,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="lts-inner">
-            <h2>Let's start your project now</h2>
+            <h2>Let’s Start Your Project Now</h2>
             <a [routerLink]="['/contact']" class="btn-white-border"
               >Contact us now <img src="../../../assets/images/arrow.svg"
             /></a>
