--- a/src/app/pages/services/graphic/graphic.component.html
+++ b/src/app/pages/services/graphic/graphic.component.html
@@ -30,13 +30,12 @@
       <div class="col-md-6">
         <div class="tssp">
           <p>
-            A word that helps you to build your brand. A logo is a symbol icon
-            with logo text or image that helps your customer identify your
-            products in the market. At Ventonix we help you to build a logo that
-            helps you build long-term customer loyalty. We provide you the
-            custom logos that are original and helps build a winning brand.We
-            provide website design services consisting wireframes, layouts, and
-            sitemap among others that you need for the online store
+            Want to create a human-centric and intuitive design that reaches
+            your target audience and helps you build a digital presence? Reach
+            out to Ventonix. Our UI/UX designers collaborate with businesses and
+            startups to deliver smooth UI/UX designs that help to build digital
+            media presence, increase customer loyalty, and enhance the brand
+            value.
           </p>
         </div>
       </div>
@@ -64,7 +63,7 @@
                 />
               </div>
               <div class="content">
-                <h2>E-mail marketing</h2>
+                <h2>Email marketing</h2>
               </div>
             </li>
             <li>
@@ -100,7 +99,7 @@
                 />
               </div>
               <div class="content">
-                <h2>E-mail marketing</h2>
+                <h2>Email marketing</h2>
               </div>
             </li>
             <li>
@@ -141,13 +140,12 @@
     <div class="row">
       <div class="col-md-12">
         <div class="Specilize-title">
-          <h2>We specialize at</h2>
+          <h2>We Specialize In</h2>
           <p>
-            Ventonix is an imaginative designing company, specializing in
-            various fields like Logo Design, Website Design, Mockups, Banner
-            Design, Stationery Design, Brochure & Flyer design. We have a team
-            of experienced designers that provides you clean and professional
-            artwork.
+            We have a team of UI/UX designers who have hands-on experience with
+            the latest designing tools. Our UI/UX designers always consider
+            current industry trends and create UI/UX as per the design
+            guidelines. Have a look at the UI/UX and Graphic design services.
           </p>
         </div>
         <div class="Specilize-list">
@@ -291,13 +289,12 @@
       <div class="row">
         <div class="col-md-12">
           <div class="lts-inner">
-            <h2>
+            <!-- <h2>
               Are you happy with what we offer? Grab your wrapkit copy now
-            </h2>
+            </h2> -->
             <p>
-              You can relay on our amazing features list and also our customer
-              services will be great experience for you without doubt and in
-              no-time
+              Enjoy bringing your idea to life together with our ambitious and
+              skilled design team.
             </p>
             <a routerLink="/contact" class="btn-white-border">
               Ask for quotation <img src="../../../../assets/images/arrow.svg"
