--- a/src/app/pages/services/mobile-app/mobile-app.component.html
+++ b/src/app/pages/services/mobile-app/mobile-app.component.html
@@ -16,7 +16,10 @@
               stroke-linecap="round"
             />
           </svg>
-          <h2 class="mt-3">Awesome Apps for your awesome business!</h2>
+          <h2 class="mt-3">
+            Delivering Awesome Digital Experiences Through Our Mobile App
+            Development Services
+          </h2>
         </div>
       </div>
     </div>
@@ -30,8 +33,9 @@
       <div class="col-md-6">
         <div class="tssp">
           <p>
-            Business application is the most important aspect of any business.
-            Get exposed to masses with your own business application.
+            We provide best-in-class mobile app development services for
+            businesses and startups that offer a stellar experience to users on
+            all modern platforms and devices.
           </p>
         </div>
       </div>
@@ -102,10 +106,11 @@
     <div class="row">
       <div class="col-md-12">
         <div class="benefits-title">
-          <h2>Features that just work...</h2>
+          <h2>Mobile App Development Services</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            We understand your business requirements & market trends to deliver
+            best-in-class mobile app development services that help you enter
+            the digital landscape and build a brand identity.
           </p>
         </div>
         <div class="benefits-list">
@@ -119,10 +124,11 @@
                 />
               </div>
               <div class="content">
-                <h4>Android / iPhone</h4>
+                <h4>Native Mobile App Development</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut.
+                  We develop high-quality, scalable, and reliable mobile apps
+                  for Android and iOS platforms that offer excellent
+                  performance.
                 </p>
               </div>
             </li>
@@ -135,10 +141,11 @@
                 />
               </div>
               <div class="content">
-                <h4>Cloud Based</h4>
+                <h4>Cross-Platform App Development</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut.
+                  Our mobile app developers use leading cross-platform
+                  frameworks to develop mobile apps that offer a native-like
+                  experience.
                 </p>
               </div>
             </li>
@@ -151,10 +158,10 @@
                 />
               </div>
               <div class="content">
-                <h4>Online / Offline Support</h4>
+                <h4>Mobile App Porting</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut.
+                  We can migrate your mobile app to multiple platforms to reach
+                  a larger audience and increase ROI for your business.
                 </p>
               </div>
             </li>
@@ -167,10 +174,11 @@
                 />
               </div>
               <div class="content">
-                <h4>Social Integrated</h4>
+                <h4>Mobile App Design</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut
+                  Our UI/UX design experts combine the latest design trends with
+                  platform-specific guidelines to create an attractive &
+                  user-friendly design.
                 </p>
               </div>
             </li>
@@ -183,10 +191,11 @@
                 />
               </div>
               <div class="content">
-                <h4>High Quality</h4>
+                <h4>Mobile App Strategy</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut.
+                  Our mobile app consulting team creates a complete roadmap for
+                  your app from start to finish to help your business thrive in
+                  the digital landscape.
                 </p>
               </div>
             </li>
@@ -199,10 +208,11 @@
                 />
               </div>
               <div class="content">
-                <h4>Multi Device</h4>
+                <h4>Mobile App Maintenance and Support</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut.
+                  We utilize modern technologies and software tools to detect
+                  issues and resolve bugs to keep your app robust, secure &
+                  high-performant.
                 </p>
               </div>
             </li>
@@ -223,11 +233,8 @@
       <div class="row">
         <div class="col-md-12">
           <div class="lts-inner">
-            <h2>Like what you see?</h2>
-            <p>
-              Why not drop us a message and we will get back to you with your
-              personalized quotation?
-            </p>
+            <h2>Have an excellent idea in mind? Don't know where to start?</h2>
+            <p>Our expert will contact you and provide a free consultation.</p>
             <a routerLink="/contact" class="btn-white-border">
               Get a quote <img src="../../../../assets/images/arrow.svg"
             /></a>
