--- a/src/app/pages/services/seo/seo.component.html
+++ b/src/app/pages/services/seo/seo.component.html
@@ -30,9 +30,9 @@
       <div class="col-md-6">
         <div class="tssp">
           <p>
-            SEO(Search Engine Optimization) for any website has become a
-            necessity for any business to differentiate from others in the
-            market.
+            We understand every business well and design a customized SEO
+            campaign that helps them reach the target audience, increase
+            traffic, and ultimately generate more revenue.
           </p>
         </div>
       </div>
@@ -60,7 +60,7 @@
                 />
               </div>
               <div class="content">
-                <h2>E-mail marketing</h2>
+                <h2>Email marketing</h2>
               </div>
             </li>
             <li>
@@ -103,11 +103,8 @@
     <div class="row">
       <div class="col-md-12">
         <div class="benefits-title">
-          <h2>Features that just work...</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
+          <h2>Our SEO Services</h2>
+          <p>Here are some of the services we offer:</p>
         </div>
         <div class="benefits-list">
           <ul>
@@ -120,10 +117,13 @@
                 />
               </div>
               <div class="content">
-                <h4>Onsite SEO</h4>
+                <h4>SEO Consulting</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt u
+                  We are familiar with the things needed for ranking higher,
+                  enhancing traffic, and getting more conversations. By choosing
+                  our SEO services, our SEO consultants will provide proper
+                  guidance and consultation to help your business achieve top
+                  rankings along with more leads, sales, and revenue.
                 </p>
               </div>
             </li>
@@ -136,10 +136,12 @@
                 />
               </div>
               <div class="content">
-                <h4>Offsite SEO</h4>
+                <h4>Keyword Research & Strategy</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut.
+                  To ensure that your website or app ranks higher on search
+                  engines and provides you with desired traffic, our SEO
+                  professionals conduct detailed keyword research and then make
+                  a strategy to optimize the website accordingly.
                 </p>
               </div>
             </li>
@@ -152,10 +154,13 @@
                 />
               </div>
               <div class="content">
-                <h4>White hat SEO</h4>
+                <h4>On-Page SEO</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut.
+                  Search engines update their algorithms regularly. Our
+                  professionals follow the search engine best practices for
+                  increasing visibility, driving valuable traffic, and
+                  ultimately helping you to generate leads for your business
+                  website.
                 </p>
               </div>
             </li>
@@ -168,10 +173,13 @@
                 />
               </div>
               <div class="content">
-                <h4>Keyword Research</h4>
+                <h4>Off-Page SEO</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut.
+                  Off-page SEO is crucial for building a website's recognition
+                  and domain authority. We check your presence through search
+                  engine result pages (SERP) and conduct various off-page
+                  activities to increase rankings, get relevant traffic, and
+                  build credibility.
                 </p>
               </div>
             </li>
@@ -184,10 +192,13 @@
                 />
               </div>
               <div class="content">
-                <h4>Content writing</h4>
+                <h4>Link Building</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut.
+                  Backlinks play a vital role in the ranking of every website.
+                  We do deep analyzes of your website and find the best
+                  opportunities for link-building. Our team of SEO professionals
+                  builds a strategic plan for creating high-quality links for
+                  your website.
                 </p>
               </div>
             </li>
@@ -200,15 +211,17 @@
                 />
               </div>
               <div class="content">
-                <h4>Google Adwords</h4>
+                <h4>Technical SEO</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut.
+                  We provide technical SEO for all kinds of websites. Our SEO
+                  team audits your entire website to find bugs that affect the
+                  search engines and then takes utmost care of crawling,
+                  indexing, rendering, and website architecture.
                 </p>
               </div>
             </li>
 
-            <li>
+            <!-- <li>
               <div class="icons">
                 <img
                   src="../assets/images/seo-benefits-7.svg"
@@ -239,7 +252,7 @@
                   do eiusmod tempor incididunt ut.
                 </p>
               </div>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -288,11 +301,11 @@
       <div class="row">
         <div class="col-md-12">
           <div class="lts-inner">
-            <h2>Happy with what we offer? Grab it Now!</h2>
-            <p>
-              Yeah ! Its pretty cool about what you are offering and i starterd
-              to feel in love with your Amazing UI Kit
-            </p>
+            <h2>
+              Want to get more exposure on search engines and increase your
+              traffic?
+            </h2>
+            <p>Share your details and we will help you achieve your goal.</p>
             <a routerLink="/contact" class="btn-white-border">
               Ask a quotation <img src="../../../../assets/images/arrow.svg"
             /></a>
