--- a/src/app/pages/services/website/website.component.html
+++ b/src/app/pages/services/website/website.component.html
@@ -17,7 +17,7 @@
             />
           </svg>
           <h2 class="mt-3">
-            Website design plays a vital role in growing your business.
+            We give life to your ideas through website development
           </h2>
         </div>
       </div>
@@ -32,9 +32,10 @@
       <div class="col-md-6">
         <div class="tssp">
           <p>
-            Your website is the first impression for your customers so it should
-            be perfect by all the means. Websites developed and designed at
-            Ventonix are a synonym for Creativity, Innovation, and Precision.
+            We offer a wide range of website development solutions to different
+            industries worldwide. Our web developers use their creativity with
+            the latest tools & technologies to reliable, scalable, and
+            user-friendly websites to help businesses grow.
           </p>
         </div>
       </div>
@@ -119,9 +120,8 @@
         <div class="benefits-title">
           <h2>How do we benefit you?</h2>
           <p>
-            We provide you the best reliable solutions to your business ideas
-            and turning them into user-interface that helps your website reach
-            the customers.
+            We turn your ideas into an intuitive website that users fall in love
+            with and helps your business to reach new heights.
           </p>
         </div>
         <div class="benefits-list">
@@ -153,8 +153,8 @@
               <div class="content">
                 <h4>Stable and Secure</h4>
                 <p>
-                  The website is built and coded by a group of expert members.
-                  So they are powerful, stable and secure
+                  Our team of professionals conducts various tests to ensure
+                  that your website is robust, stable, and secure.
                 </p>
               </div>
             </li>
@@ -169,8 +169,8 @@
               <div class="content">
                 <h4>Responsive Design</h4>
                 <p>
-                  Websites may not run smoothly on the multiple platforms, we
-                  overcome it by making websites responsive.
+                  We check your website on a vast number of devices and screen
+                  sizes to make it fully responsive.
                 </p>
               </div>
             </li>
@@ -183,10 +183,10 @@
                 />
               </div>
               <div class="content">
-                <h4>Cost Effective Development</h4>
+                <h4>Cost-Effective</h4>
                 <p>
-                  We provide you the website with affordable charges at
-                  competitive prices maintaining competency.
+                  We assure to deliver websites with competitive pricing without
+                  compromising on the quality & performance.
                 </p>
               </div>
             </li>
@@ -199,10 +199,10 @@
                 />
               </div>
               <div class="content">
-                <h4>Graphics Support</h4>
+                <h4>Beautiful Graphics</h4>
                 <p>
-                  Web development services provide you high support
-                  infrastructure for powerful 2D/3D graphics
+                  We use various designing tools to integrate attractive and
+                  user-friendly graphics as per the latest design trends.
                 </p>
               </div>
             </li>
@@ -217,8 +217,8 @@
               <div class="content">
                 <h4>Customer Support</h4>
                 <p>
-                  We provide business ideas and user-interface that helps your
-                  website reach the customers.
+                  Our team provides regular support against any kind of issues
+                  on your website.
                 </p>
               </div>
             </li>
@@ -239,7 +239,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="lts-inner">
-            <h2>Are you looking for Online Appointment?</h2>
+            <h2>Let’s start your project now</h2>
 
             <a routerLink="/contact" class="btn-white-border">
               Contact us now <img src="../../../../assets/images/arrow.svg"
