--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -18,10 +18,10 @@
         <div class="footer-inner">
           <ul>
             <li>
-              <a routerLink="#">Privacy Policy</a>
+              <a routerLink="/policy">Privacy Policy</a>
             </li>
             <li>
-              <a routerLink="#">Terms</a>
+              <a routerLink="/terms">Terms</a>
             </li>
           </ul>
         </div>
