feat : new changes

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -197,7 +197,7 @@
               join our team
             </h2>
             <a [routerLink]="['/careers']" class="btn-white-border"
-              >see openings
+              >See Openings
               <img src="../../../assets/images/arrow.svg" alt="icon"
             /></a>
           </div>
