--- a/src/app/pages/policy/policy.component.html
+++ b/src/app/pages/policy/policy.component.html
@@ -13,7 +13,7 @@
           <p>
             If you have additional questions or require more information about
             our Privacy Policy, do not hesitate to contact us through email at
-            ventonix@gmail.com.
+            mail@ventonix.com.
           </p>
           <p>
             This privacy policy applies only to our online activities and is
