--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -10,7 +10,7 @@
               class="img-fluid"
               alt=""
             />
-            <span>© 2021 Ventonix.com</span>
+            <span>© 2022 Ventonix.com</span>
           </div>
         </div>
       </div>
@@ -18,10 +18,10 @@
         <div class="footer-inner">
           <ul>
             <li>
-              <a routerLink="/policy">Privacy Policy</a>
+              <a routerLink="/policy">Privacy</a>
             </li>
             <li>
-              <a routerLink="/terms">Terms</a>
+              <a routerLink="/terms">Terms Of Use</a>
             </li>
           </ul>
         </div>
