--- a/src/app/pages/policy/policy.component.scss
+++ b/src/app/pages/policy/policy.component.scss
@@ -26,6 +26,13 @@
     }
   }
 }
+ul {
+  list-style-type: bullet;
+  color: #262332;
+  opacity: 0.5;
+  padding-left: 20px;
+  font-size: 16px;
+}
 
 .logo {
   filter: none !important;
