feat : add captcha and minor changes

--- a/src/app/pages/services/mobile-app/mobile-app.component.scss
+++ b/src/app/pages/services/mobile-app/mobile-app.component.scss
@@ -126,7 +126,8 @@
         border-radius: 2px;
         box-sizing: border-box;
         padding: 60px;
-        max-height: 315px;
+        // max-height: 315px;
+        height: auto;
         h4 {
           color: #262332;
           font-family: Montserrat;
