--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -118,6 +118,14 @@
                 </div>
               </div>
             </div>
+            <div class="form-group">
+              <ngx-recaptcha2
+                #captchaElem
+                siteKey="6LfDLw4eAAAAAOOZlIndxw7igyUxP7jQqwZNb-RO"
+                formControlName="recaptcha"
+              >
+              </ngx-recaptcha2>
+            </div>
 
             <div class="form-group">
               <div class="form-check">
