--- a/src/app/pages/services/seo/seo.component.scss
+++ b/src/app/pages/services/seo/seo.component.scss
@@ -126,7 +126,7 @@
         border-radius: 2px;
         box-sizing: border-box;
         padding: 60px;
-        height: 300px;
+        height: auto;
         h4 {
           color: #262332;
           font-family: Montserrat;
