feat : chnages for captcha

--- a/src/app/pages/application/application.component.html
+++ b/src/app/pages/application/application.component.html
@@ -30,10 +30,7 @@
       <div class="col-md-12">
         <div class="lp-inner">
           <h2>Apply now</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
+          <p>Sr. Mobile Apps Developer</p>
         </div>
       </div>
       <div class="col-md-6">
@@ -84,7 +81,7 @@
                 </div>
               </div>
             </div>
-            <div class="row m-0">
+            <div class="row show-row">
               <div class="col-md-6 pl-0">
                 <div class="form-group">
                   <input
