--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -30,7 +30,7 @@
 </section>
 
 <!-- ************************** Recent Project ********************** -->
-<section class="slide-project">
+<!-- <section class="slide-project">
   <span class="img-bg-1">
     <img src="../../assets/images/slide-round.svg" class="img-fluid" alt="" />
     <img src="../../assets/images/circle.svg" class="img-fluid" alt="" />
@@ -40,7 +40,7 @@
       <div class="col-md-12">
         <div class="slide-inner">
           <h4 class="text-white text-center">RECENT PROJECTS</h4>
-          <!-- Swiper -->
+        
           <div class="swiper-container gallery-thumbs">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
@@ -223,7 +223,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- ****************************We offer  *************************** -->
 
