--- a/src/app/shared/components/recent-projects/recent-projects.component.html
+++ b/src/app/shared/components/recent-projects/recent-projects.component.html
@@ -1,4 +1,4 @@
-<section class="slide-project">
+<!-- <section class="slide-project">
   <span class="img-bg-1">
     <img src="../../assets/images/about-icon-6.svg" class="img-fluid" alt="" />
     <img src="../../assets/images/about-icon-5.svg" class="img-fluid" alt="" />
@@ -8,7 +8,7 @@
       <div class="col-md-12">
         <div class="slide-inner">
           <h4 class="text-center">RECENT PROJECTS</h4>
-          <!-- Swiper -->
+         
           <div class="swiper-container gallery-thumbs">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
@@ -197,4 +197,4 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
