--- a/src/app/pages/application/application.component.scss
+++ b/src/app/pages/application/application.component.scss
@@ -135,6 +135,12 @@ button {
   .login-form .pl-0 {
     padding: 0;
   }
+  .login-form .pr-0 {
+    padding-right: 0;
+  }
+  .show-row {
+    margin: 0 !important;
+  }
   .sv-hero {
     padding: 145px 0 0px 0px;
     background-image: none;
