--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -78,7 +78,7 @@
                     <mat-error *ngIf="formName().email.errors.required"
                       >Email is required</mat-error
                     >
-                    <mat-error *ngIf="formName().email.errors?.email"
+                    <mat-error *ngIf="formName().email.errors?.pattern"
                       >Email must be a valid Email address</mat-error
                     >
                   </div>
@@ -121,7 +121,7 @@
             <div class="form-group">
               <ngx-recaptcha2
                 #captchaElem
-                siteKey="6LfDLw4eAAAAAOOZlIndxw7igyUxP7jQqwZNb-RO"
+                siteKey="6LemHxceAAAAAKwEWF_avc5iLMDEztW6oExOXlTI"
                 formControlName="recaptcha"
               >
               </ngx-recaptcha2>
@@ -149,7 +149,11 @@
             </div>
 
             <div class="form-group text-left">
-              <a class="btn btn-main" (click)="onSubmit(contactUs)">
+              <a
+                class="btn btn-main"
+                [ngClass]="{ disable: !contactUs.valid }"
+                (click)="onSubmit(contactUs)"
+              >
                 <!-- <span
                   class="spinner-border spinner-border-sm mr-1"
                   *ngIf="applicationForm.valid"
