--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -22,6 +22,10 @@
     margin-bottom: 130px;
   }
 }
+.disable {
+  pointer-events: none;
+  background: whitesmoke !important;
+}
 
 // ********************button****************
 
